[gd_scene load_steps=2 format=3 uid="uid://f2yn8r0pqpr6q"]

[ext_resource type="Script" path="res://scripts/ui/crafting_ui.gd" id="1_crafting"]

[node name="CraftingUI" type="CanvasLayer"]
script = ExtResource("1_crafting")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Crafting Station"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RecipesSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="RecipesLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/RecipesSection"]
layout_mode = 2
text = "Available Recipes:"

[node name="RecipesList" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/RecipesSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="DetailsSection" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DetailsLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/DetailsSection"]
layout_mode = 2
text = "Recipe Details:"

[node name="DetailsContent" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/DetailsSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="CraftButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HSplitContainer/DetailsSection"]
layout_mode = 2
text = "Craft"

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Close (C)"
